# Agentic-Ai-Projects

./: pyproject.toml  requirements.txt
chatbot/: chat.py  chatbot.db-shm  chatbot.db-wal
email-summariser/: main.py
job-applier/: applications.json  auth.json  cookie.json  job.py  profile.json  scrapper.py
product-reviewer/: product.py
response-sender/: main.py
social-media-growth/: social.py
travel_agent/: comparison.py  new.py  planner.py  travel.py  weather.py
weather-agent/: main.py
youtube_blog/: blog.py
